# ChangeLog for x11-libs/qt-assistant
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-assistant/ChangeLog,v 1.27 2009/02/18 20:16:38 jer Exp $

  18 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-assistant-4.4.2-r1.ebuild:
  Stable for HPPA (bug #248083).

*qt-assistant-4.5.0_rc1 (11 Feb 2009)

  11 Feb 2009; Ben de Groot <yngwin@gentoo.org>
  +qt-assistant-4.5.0_rc1.ebuild:
  Version bump. Dropping keywords for arches that don't have qt-webkit
  keyworded, which is now a hard dependency.

  06 Feb 2009; Raúl Porcel <armin76@gentoo.org>
  qt-assistant-4.4.2-r1.ebuild:
  ia64/sparc stable wrt #248038

  04 Feb 2009; Brent Baude <ranger@gentoo.org> qt-assistant-4.4.2-r1.ebuild:
  Marking qt-assistant-4.4.2-r1 ppc64 stable for bug 248038

  04 Feb 2009; Ben de Groot <yngwin@gentoo.org> qt-assistant-4.4.2-r1:
  Clean up DEPEND now that proper webkit useflag masks are in profiles

  31 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  qt-assistant-4.4.2-r1.ebuild:
  Stable on alpha, bug #248038

  29 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  qt-assistant-4.4.2-r1.ebuild:
  keyword ~x86-fbsd

  18 Jan 2009; Markus Meier <maekke@gentoo.org>
  qt-assistant-4.4.2-r1.ebuild:
  amd64/x86 stable, bug #248038

  17 Jan 2009; nixnut <nixnut@gentoo.org> qt-assistant-4.4.2-r1.ebuild:
  ppc stable #248038

  06 Jan 2009; Ben de Groot <yngwin@gentoo.org>
  -qt-assistant-4.4.0-r1.ebuild, -qt-assistant-4.4.1.ebuild,
  -qt-assistant-4.4.2.ebuild:
  Clean out old ebuilds

*qt-assistant-4.4.2-r1 (05 Jan 2009)

  05 Jan 2009; Ben de Groot <yngwin@gentoo.org>
  +qt-assistant-4.4.2-r1.ebuild:
  Add fix to install correct icon, bug 241208.

  01 Oct 2008; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Fix unicode apostrophe that was causing an error during use.local.desc
  generation.

  01 Oct 2008; Ben de Groot <yngwin@gentoo.org> metadata.xml,
  qt-assistant-4.4.1.ebuild, qt-assistant-4.4.2.ebuild: