@@ -1,10 +1,13 @@
 AUX Assistant.desktop 368 RMD160 dd28aea43bc8e013e6631d0ee91449b8a2e9594d SHA1 515684005a50bfa19ed84fb4105fbb9317ad5d99 SHA256 77b0852193675857141e0ce9ac521cfdab1506a822436a0dec4c4221a680cc4b
 DIST qt-mac-opensource-src-4.4.2.tar.bz2 100715282 RMD160 6c92c2d745ca75fc9779f360825a48c29689ff61 SHA1 217e2d4f80d1c6d68d6bdfe8c757b2bfee929421 SHA256 1191d87e55a718a6cd2d20c2cf43f93ca98de5aebfa49152ef2551ee36914e56
 DIST qt-mac-opensource-src-4.5.0-rc1.tar.bz2 108654601 RMD160 36c7490f9e4d55d86d875d91357c57ecd4acd8f3 SHA1 93e593b68e974ee30c7a044a7373ba2d3878def2 SHA256 e96eff94f40752da6c0eb64f91c58346a2d87a2b2f7a09155d509cb8195881bf
+DIST qt-mac-opensource-src-4.5.0.tar.bz2 111184478 RMD160 1df7c97276d89b814b867abc3d53a9423f720181 SHA1 a9704ccc501e66360015f33d97e939d5e2ab7c81 SHA256 baccbfa5c55da9a1f97192ec643b63f7e8afc2d51eab5f954617efd321fab947
 DIST qt-x11-opensource-src-4.4.2-headers.tar.bz2 2509611 RMD160 3424d4049f1c06959bd57a98e3933636515c60fa SHA1 f0945230b8856b446f03473c18474e9224b30fcf SHA256 aa02d9e2c017ff92d91ef73781d4d1a28be53136886ac99275df053fe31d1fff
 DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0dff7f961af7b371ddd97 SHA1 0bc56934565f529a2708533a4f160fbc87b9d9e0 SHA256 0530fefc452e5029877739164e133de7df5faa519b0fb3d9fcf40b467350c675
 DIST qt-x11-opensource-src-4.5.0-rc1.tar.bz2 110889586 RMD160 60b410f1776d5f55863543fcd4dd3a8105864ec1 SHA1 1dffebc52543ee8dd486ec69fc51d02e216323bd SHA256 94aa6268662a24cec1a20e2fb88fcac418101719c0e1ab2729289fd8b7d475d7
+DIST qt-x11-opensource-src-4.5.0.tar.bz2 113335010 RMD160 5714f2772ce358e6528ec13121aebc8e63e848cf SHA1 db136bbed1715c155ceb610309d33f943c1df8fd SHA256 e1b356a54e65781ed94f19d785356a88daa8d38b9dbbca35439b80ca8c4a5be9
 EBUILD qt-assistant-4.4.2-r1.ebuild 2150 RMD160 c41fac671ef7a3712ae25707590ba6015429ff90 SHA1 b1d9a34152d9cbe75710df02a87c4b4073932763 SHA256 76cf03316e3094ab78e7b494df9cb40be09b650c29c437717ffa0f368647b52a
+EBUILD qt-assistant-4.5.0.ebuild 1537 RMD160 e5643e3e40560e93c8fee177a9b1c4334caca31d SHA1 23f56bb4b81e3f8acf4f91a379895666c8984078 SHA256 b3013ed6b82037db9645dc5626d1418018a09d19b52a04ddae583b1d2b2d7679
 EBUILD qt-assistant-4.5.0_rc1.ebuild 1608 RMD160 ffec2f3f0daa3e722243e62e1542d6e4312df4fe SHA1 40a82142492c62d2d0562916ff865ca267f5fe69 SHA256 d39c3cacb5291da8eb3488c46588a3e115fbae26675b82160160c5fb066dffde
-MISC ChangeLog 4183 RMD160 6bf695980d042b529c563c263350e27eaf5814d9 SHA1 9d3cb02f61f6ef01dbdaa2de298d6a27a6134fdd SHA256 b0205a783c20f8f5dbce305e76a284780e703c54c2e642465bb4e90a31604ea0
+MISC ChangeLog 4313 RMD160 fd4818c21c8e26a596c265eb68da9d6696fc4ac9 SHA1 92c24a9016a8c39d5b37f15211ff49d2977337d8 SHA256 2597855b1825e7a5b47442975f950ae758d9afc0b12531de3c0dd31e9b417d96
 MISC metadata.xml 342 RMD160 39caad45b183f242fcd2bb217ec6c8b743aca822 SHA1 459e60db07dbed8f1aa5b3b66194abfd5db74625 SHA256 e91ea92bd61f65a4a215796c172d0689b71910b336c70d039d9e8c1d3e66e549
