@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/qt-assistant
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-assistant/ChangeLog,v 1.27 2009/02/18 20:16:38 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-assistant/ChangeLog,v 1.28 2009/03/04 21:07:23 yngwin Exp $
+
+*qt-assistant-4.5.0 (04 Mar 2009)
+
+  04 Mar 2009; Ben de Groot <yngwin@gentoo.org> +qt-assistant-4.5.0.ebuild:
+  Version bump
 
   18 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-assistant-4.4.2-r1.ebuild:
   Stable for HPPA (bug #248083).
